--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://nareshsolanki99.github.io/dhoklawalas",
+  "homepage": "https://nareshsolanki99.github.io/",
   "name": "dhoklawala",
   "version": "0.1.0",
   "private": true,
