--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.1",
+    "dotenv": "^10.0.0",
     "fuse.js": "^6.4.6",
     "gh-pages": "^3.2.0",
     "react": "^17.0.2",
